--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
+		"@nuxtjs/tailwindcss": "^6.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
 		"@typescript-eslint/parser": "^5.6.0",
 		"@vue/eslint-config-standard": "^8.0.1",
@@ -19,6 +20,5 @@
 		"nuxt": "3.0.0",
 		"prettier": "^2.8.0",
 		"typescript": "^4.9.3"
-	},
-	"dependencies": {}
+	}
 }
