--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"eslint-plugin-vue": "^9.8.0",
 		"nuxt": "3.0.0",
 		"prettier": "^2.8.0",
+		"sass": "^1.56.1",
 		"typescript": "^4.9.3"
 	}
 }
