--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare"
+		"postinstall": "nuxt prepare",
+		"codegen": "graphql-code-generator -r dotenv/config --config codegen.yaml"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^2.16.1",
+		"@graphql-codegen/schema-ast": "^2.6.0",
 		"@nuxtjs/tailwindcss": "^6.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
 		"@typescript-eslint/parser": "^5.6.0",
@@ -17,9 +20,12 @@
 		"eslint-plugin-nuxt": "^4.0.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-vue": "^9.8.0",
+		"graphql": "^16.6.0",
+		"graphql-codegen": "^0.4.0",
 		"nuxt": "3.0.0",
 		"prettier": "^2.8.0",
 		"sass": "^1.56.1",
-		"typescript": "^4.9.3"
-	}
+		"typescript": "^4.9.4"
+	},
+	"dependencies": {}
 }
