--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
 	"devDependencies": {
 		"@graphql-codegen/cli": "^2.16.1",
 		"@graphql-codegen/schema-ast": "^2.6.0",
+		"@graphql-codegen/typed-document-node": "^2.3.10",
+		"@graphql-codegen/typescript": "^2.8.5",
+		"@graphql-codegen/typescript-operations": "^2.5.10",
 		"@nuxtjs/tailwindcss": "^6.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
 		"@typescript-eslint/parser": "^5.6.0",
@@ -27,5 +30,7 @@
 		"sass": "^1.56.1",
 		"typescript": "^4.9.4"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"graphql-request": "^5.0.0"
+	}
 }
