--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
 		"codegen": "graphql-code-generator -r dotenv/config --config codegen.yaml"
+		"stylelint": "stylelint '**/*.scss'"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^2.16.1",
@@ -28,6 +29,9 @@
 		"nuxt": "3.0.0",
 		"prettier": "^2.8.0",
 		"sass": "^1.56.1",
+		"stylelint": "^14.16.0",
+		"stylelint-config-recommended-scss": "^8.0.0",
+		"stylelint-scss": "^4.3.0",
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
