--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"postinstall": "nuxt prepare",
-		"codegen": "graphql-code-generator -r dotenv/config --config codegen.yaml"
+		"codegen": "graphql-code-generator -r dotenv/config --config codegen.yaml",
 		"stylelint": "stylelint '**/*.scss'"
 	},
 	"devDependencies": {
@@ -27,7 +27,7 @@
 		"graphql": "^16.6.0",
 		"graphql-codegen": "^0.4.0",
 		"nuxt": "3.0.0",
-		"prettier": "^2.8.0",
+		"prettier": "^2.8.1",
 		"sass": "^1.56.1",
 		"stylelint": "^14.16.0",
 		"stylelint-config-recommended-scss": "^8.0.0",
