--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@graphql-codegen/typed-document-node": "^2.3.10",
 		"@graphql-codegen/typescript": "^2.8.5",
 		"@graphql-codegen/typescript-operations": "^2.5.10",
+		"@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
 		"@nuxtjs/tailwindcss": "^6.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
 		"@typescript-eslint/parser": "^5.6.0",
