--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"dependencies": {
 		"graphql-request": "^5.0.0",
 		"gsap": "^3.11.3",
-		"moment": "^2.29.4"
+		"moment": "^2.29.4",
+		"tiny-emitter": "^2.1.0"
 	}
 }
