Linter fix for windows

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
 	"printWidth": 100,
 	"tabWidth": 4,
 	"useTabs": true,
-	"editor.formatOnSave": true
+	"editor.formatOnSave": true,
+	"endOfLine": "auto"
 }
