--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
+		"@types/dompurify": "^2.4.0",
+		"@types/marked": "^4.0.8",
 		"@vueuse/integrations": "^9.9.0",
+		"dompurify": "^2.4.1",
 		"focus-trap": "^7.2.0",
 		"graphql-request": "^5.0.0",
 		"gsap": "^3.11.3",
+		"install": "^0.13.0",
+		"marked": "^4.2.5",
 		"moment": "^2.29.4",
 		"tiny-emitter": "^2.1.0"
 	}
